--- a/src/app/residences/residences.component.html
+++ b/src/app/residences/residences.component.html
@@ -1,5 +1,5 @@
 <div class="search-bar">
-  <input [(ngModel)]="searchTerm" placeholder="Rechercher par adresse..." />
+  <input [formControl]="searchControl" placeholder="Rechercher par adresse..." />
 </div>
 
 <div class="residence-list">
